# graphene

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  edit-all.sh  events.json  events.ord  make-clean.sh  make-debug.sh  make-release.sh  make-test.sh  make-video.sh
example/: README.md  settings-TEST.conf  settings-deathspiral.conf  settings-qflower.conf  settings-qsplash.conf  settings-qsun.conf
images/: README.md
inc/: camera.hpp  cuda-tools.h  display.hpp  draw.hpp  drawPens.hpp  field.hpp  fpsCounter.hpp  frameWriter.hpp  glMatrix.hpp  glShader.hpp  glfwKeys.hpp  image.hpp  imtools.hpp  keyBinding.hpp  keyFrame.hpp  keyFrameWidget.hpp  keyManager.hpp  mathParser.hpp  matrix.hpp  output.hpp  overlay.hpp  physics.h  range.hpp  rect.hpp  screenView.hpp  setting.hpp  settingForm.hpp  settings-new.hpp  simWindow.hpp  simulation.hpp  tabMenu.hpp  tools.hpp  types.hpp  units.hpp  vector.hpp
inc/cuda/: camera.cuh  camera.hpp  cuda-texture.cuh  cuda-tools.cuh  cuda-vbo.cuh  cuda-vbo.h  draw.cuh  em.cuh  field-operators.cuh  field.cuh  fluid.cuh  material.h  maxwell.cuh  raytrace.cuh  raytrace.h  render.cuh  units.cuh  vector-calc.cuh  vector-operators.h
inc/ui/: imtools.hpp  setting.hpp  settingForm.hpp  settings-new.hpp  tabMenu.hpp  toolbar.hpp  ui.hpp
inc/version/: version.hpp.in
libs/: CMakeLists.txt
libs/imgui/: CMakeLists.txt  ImGuiFileBrowser.cpp  imconfig.h  imgui.cpp  imgui.h  imgui_internal.h  imgui_widgets.cpp
libs/imgui/misc/freetype/: imgui_freetype_test.h
libs/old-imgui/: imgui.cpp  imgui_widgets.cpp
libs/old-imgui/misc/freetype/: imgui_freetype_test.h
libs/stb/: stb_image_write.h
shaders/: vlines.fsh  vlines.vsh
src/: cuda-tools.cpp  frameWriter.cpp  glShader.cpp  image.cpp  keyBinding.cpp  keyFrameWidget.cpp  keyManager.cpp  main.cpp  output.cpp  settingForm.cpp  simWindow.cpp  tabMenu.cpp
src/cuda/: draw.cu  em.cu  field.cu  fluid.cu  graphene.cu  maxwell.cu  render.cu  vlines.cu
src/ui/: settingForm.cpp  tabMenu.cpp  toolbar.cpp
